get last statement from current statement
